# industrial-multi-agent

./: .gitignore  README.md  docker-compose.yml
Agent-Analytics/: .gitignore  AGENTS.md  CHAT_SUMMARY.md  cli.py  main.py  pyproject.toml
Agent-Analytics/agents/: reasoner.py  worker.py
Agent-Analytics/db/: connection.py  models.py  schema.sql
Agent-Analytics/ingestion/: ingest.py
Agent-Analytics/knowledge_base/: README.md  bearing-replacement.md  production-target-setting.md  quality-inspection-procedure.md  safety-lockout-tagout.md
Agent-Analytics/tools/: adapt.py  analytics.py  knowledge.py
backend/: .env.example  Dockerfile  main.py  requirements.txt
backend/agents/: reasoner.py  worker.py
backend/api/: routes_agent.py  routes_data.py
backend/db/: connection.py  knowledge_base.py  models.py  schema.sql
backend/ingestion/: ingest.py
backend/knowledge_base/: belt-tension-adjustment.md  conveyor-belt-maintenance.md  emergency-stop-protocol.md  incident-reporting.md  lubrication-schedule.md  motor-overheating-troubleshooting.md  preventive-maintenance-calendar.md  scrap-rate-reduction.md  sensor-calibration.md  shift-handover-checklist.md  vibration-analysis.md
backend/scheduler/: jobs.py
backend/tools/: analytics.py  data_io.py  knowledge.py  knowledge_base_tool.py  oee.py  troubleshoot.py
dashboard/: index.html  package-lock.json  package.json
dashboard/src/: App.tsx
dashboard/src/api/: client.ts
dashboard/src/components/: ChatBubble.tsx  Gauge.tsx  StatusCard.tsx  TrendChart.tsx
dashboard/src/hooks/: usePoll.ts
(+4 files in other folders)
