[project]
name = "agent-analytics"
version = "0.1.0"
description = "Standalone industrial plant data analytics agent"
requires-python = ">=3.12"
dependencies = [
    "setuptools>=75.1.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.6",
    "crewai>=0.61.0",
    "sqlalchemy>=2.0.35",
    "pandas>=2.2.2",
    "numpy>=1.26.4",
    "python-dotenv>=1.0.1",
    "pydantic>=2.9.2",
    "openai>=1.51.0",
    "httpx>=0.27.2",
]

[project.scripts]
agent-analytics = "cli:main"

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"
